[package]
name = "bevy_rancic"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
chrono = "0.4.38"
# unicode-segmentation = "1.11.0"
# strum = "0.26.3"
# strum_macros = "0.26.4"

bevy = { version = "0.14", default-features = false, features=["bevy_core_pipeline"]}
# bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_rapier2d = "0.27.0"
bevy_kira_audio = "0.20.0"

noisy_bevy = "0.7.0"
# bevy_tweening = { version = "0.11.0", features = ["bevy_ui"]}
# bevy_particle_systems = "0.13.0"
# bevy_trickfilm = "0.7.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
